# bmi160_ros

./: CMakeLists.txt  README.md  package.xml
config/: bmi160_calibration.yaml  bmi160_params.yaml
launch/: bmi160.launch  bmi160_calibration.launch
src/: bmi160.cpp  bmi160_calibration_node.cpp  bmi160_interface.cpp  bmi160_publisher.cpp
